@@ -6,7 +6,7 @@
 /* Couleurs des textes */
 
 @main_text_color: #333;
-@second_text_color: #666;
+@second_text_color: #EF922B;
 @third_text_color: #999;
 @fourth_text_color: #fff;
 
@@ -41,11 +41,11 @@
 @clickable_background_color: #dfeffc;
 @clickable_border_color: #c5dbec;
 
-@clickable_hover_color: #1d5987;
+@clickable_hover_color: #EF922B;
 @clickable_hover_background_color: #d0e5f5;
 @clickable_hover_border_color: #79b7e7;
 
-@clickable_active_color: #e17009;
+@clickable_active_color: #B8530F;
 @clickable_active_background_color: #f5f8f9;
 @clickable_active_border_color: #79b7e7;
 
