@@ -2,87 +2,69 @@
 @import "common";
 
 body {
-	font-family: Arial, Helvetica, sans-serif;
+	font-family: Arial, Helvetica, "Liberation Sans", FreeSans, sans-serif;
 	font-size: 95%;
+	color: @main_text_color;
+	background: #000;
+}
+
+#global {
+	background: @main_background_color url('@{theme_url}/images/bg.jpg') repeat-x 0 0;
 }
 
 #page {
-	color: @main_text_color;
-	background-color: @main_background_color;
+	padding-top: 218px;
+	background: transparent url('@{theme_url}/images/page.jpg') no-repeat top center;
 }
 
 header {
-	color: @fourth_text_color;
-	background-color: @fourth_background_color;
-	padding: 8px 10px;
-	.clearfix();
+	width: 960px;
+	.center-block();
+	position: relative;
 }
 	#head {
-		float: left;
 	}
 		#head .title {
-			font-size: 1.5em;
-
-			a {
-				color: @fourth_text_color;
-				text-decoration: none;
-			}
+			.visuallyhidden();
 		}
 		#head .description {
-			font-style: italic;
+			position: absolute;
+			top: 155px;
+			left: 225px;
+			color: @third_text_color;
+			font-size: 1.17em;
 		}
 
 	#access-links {
-		left: 3px;
-		list-style-type: none;
-		margin: 0;
-		padding: 0;
-		position: absolute;
-		top: 0;
+		.visuallyhidden();
 	}
-		#access-links li {
-			display: inline;
-			text-transform: none !important;
-		}
-		#access-links a,
-		#access-links a:hover,
-		#access-links a:visited {
-			background-image: none !important;
-			height: 1px;
-			left: 0;
-			overflow: hidden;
-			position: absolute;
-			top: -500px;
-			width: 1px;
-		}
-		#access-links a:active,
-		#access-links a:focus {
-			height: auto;
-			position: static;
-			width: auto;
-		}
-
 	#lang-switcher {
-		float: right;
+		position: absolute;
+		right: 5px;
+		top: 167px;
 		margin: 0;
 		padding: 0;
 		list-style: none;
 	}
 
 #main-navigation {
-	color: @fourth_text_color;
-	background-color: @third_background_color;
+	width: 960px;
+	.center-block();
 }
 	nav {
-		padding: 5px 10px;
+		height: 30px;
+		padding: 10px 0 0;
+		text-align: center;
+		font-weight: bold;
+		font-size: 1.1em;
 
 		a {
-			color: @fourth_text_color;
+			color: @main_text_color;
 			text-decoration: none;
 			.transition(~"color linear .2s");
 
 			&:hover {
-				color: @third_text_color;
+				color: @second_text_color;
 				text-decoration: none;
 			}
 		}
@@ -94,38 +76,59 @@ header {
 		}
 		nav li {
 			display: inline-block;
-			margin: 0 20px 0 0
+			.ie7-inline-block();
+			margin: 0 25px 0 0
 		}
 
 #navigation-helpers {
-	background-color: @second_background_color;
+	width: 960px;
+	.center-block();
 
 	a {
 		.commonLink();
+		color: @fourth_text_color;
 	}
 
 	.clearfix();
 }
 	#graphic-title {
-		font-size: 1.2em;
-		padding: 0.3em;
-		float: right;
+		.visuallyhidden();
 	}
 
 	#breadcrumb {
 		float: left;
+		margin: 3px 0 0;
 		padding: 5px 10px;
+		color: @fourth_text_color;
 	}
 
 
 #main {
-	width: 95%;
-	margin: 0 auto;
+	width: 960px;
+	.center-block();
 }
 
-h1 {}
+h1 {
+	color: @second_text_color;
+	font-size: 1.4em;
+	margin: 1.8em 0 1em;
+	text-align: center;
+}
 
 footer {
-	font-size: 0.9em;
-	text-align: center;
+	margin-top: 2em;
+	background: #000 url('@{theme_url}/images/bg-footer.jpg') repeat-x top center;
+
+	#bottom {
+		text-align: center;
+		background: transparent url('@{theme_url}/images/footer.jpg') no-repeat bottom center;
+		height: 187px
+	}
+
+	#bottom-line {
+		font-size: 0.9em;
+		color: @fourth_text_color;
+		margin: 0;
+		padding-top: 0.7em;
+	}
 }
