@@ -11,6 +11,7 @@ CHANGELOG and HISTORY ( we try )                                         Okatea
 
 
 1.0.BETA.3
+! new dedicated Okatea theme
 ! new breadcrumb policy
 ! introduce flash messages
 ! introduce navigation menus management
